public-demo/overlays/demo/traefik/middleware-rewrite.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rewrite
spec:
  redirectRegex:
    regex: ^https://demo.virtocommerce.com/admin
    replacement: https://admin-demo.virtocommerce.com
    permanent: true
