public-demo/overlays/demo/traefik/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-https
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: $(VC_NAMESPACE)-$(VC_INSTANCE)-errorpage@kubernetescrd, $(VC_NAMESPACE)-$(VC_INSTANCE)-https-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: none
spec:
  tls:
    - hosts:
      - demo.virtocommerce.com
      - admin-demo.virtocommerce.com
      secretName: vc-wildcard
  rules:
  - host: demo.virtocommerce.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: admin-demo.virtocommerce.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
